--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ nix          = "0.12"
 failure      = "0.1"
 walkdir      = "2"
 termcolor    = "1"
-clap         = "2"
+clap         = "3.0.0-beta.1"
 serde        = { version = "1", features = ["derive"] }
 serde_yaml   = "0.7"
