--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 dirs         = "1"
 nix          = "0.12"
-failure      = "0.1"
+anyhow       = "1"
 walkdir      = "2"
 termcolor    = "1"
 clap         = "3.0.0-beta.1"
