--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,28 @@
 [package]
-name    = "project-ctl"
+name = "prctl"
 version = "0.1.0"
 authors = ["Anton Dutov <anton.dutov@gmail.com>"]
-edition = "2018"
+edition = "2024"
+
+[profile.release]
+lto = true
+strip = true
+debug = false
+rpath = false
+opt-level = 2
+incremental = false
+codegen-units = 1
+debug-assertions = false
 
 [dependencies]
-dirs         = "3"
-nix          = "0.20"
-anyhow       = "1"
-walkdir      = "2"
-termcolor    = "1"
-clap         = "3.0.0-beta.1"
-serde        = { version = "1", features = ["derive"] }
-serde_yaml   = "0.8"
+dirs = "6"
+nix = { version = "0.30", features = ["fs"] }
+anyhow = "1"
+walkdir = "2"
+owo-colors = "4"
+comfy-table = "7"
+rayon = "1"
+clap = { version = "4", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.9"
+toml = "0.9"
